--- a/index.html
+++ b/index.html
@@ -18,10 +18,7 @@
     <br>
     <div id="box2"></div><p><big>Ever since I was young, I have always been interested in the combination of technology and art. At the end of elementary school, I got my first IPad for Christmas. My favorite hobby was drawing, so I painfully drew with my index finger for hours on end before saving up for any formal software, creating pieces of digital art. Soon, I delved deeper into programs to play with projects such as animation, 3D modeling, and video editing, pushing the boundaries of what I could create. I have always been drawn towards digital art as it contains limitless possibilities in medium, allowing users to connect with an audience in ways traditional approaches would not be able to convey. That is the magic of the user experience from the creative end; figuring out how to connect to an audience through a product.</big></p></div>
 <br>
-<a href="http://127.0.0.1:5500/page2.html">
-    <div style="text-align: center;">
-    <button style="background-color: rgb(245,101,49); color: rgb(250,222,212); border-radius: 500px; height: 50px; width: 100px;"> <big>Work</big> </div> </button>
-    <br>
+ <div id="box2"></div><p><big>Click on my picture to view my work!</big></p></div>
     <br>
     <br>
     <br>
